# SEU_Lecture_Monitor

./: .env.example  .gitignore  LICENSE  pyproject.toml  readme.md
src/: call_browser.py  config.py  entry.py  lecture.py  login.py  utils.py
